database. Example: "isabelle jedit -l HOL src/HOL/Nat.thy" for theory
"HOL.Nat" in session "HOL". This information is read-only: editing
theory sources in the editor will invalidate formal markup, and replace
it by an error message. Output messages depend on system options
"show_results" (default true) and "show_states" (default false),
provided at build-time for the underlying session database.


*** Isabelle/jEdit Prover IDE ***

* The command-line tool "isabelle jedit" now supports option "-o" as in
"isabelle build", but it takes persistent preferences into account. When
options are loaded, command-line options take precedence. When options
are saved, command-line options are ignored, but original preferences
take precedence. Example:

  isabelle jedit -o threads=1

This runs Isabelle/jEdit with sequential evaluation in ML, without
affecting stored preferences of option "threads".

* Isabelle/jEdit provides builtin navigation support, with actions
navigate-backwards (AS-LEFT) and navigate-forwards (AS-RIGHT). These
actions are available via arrow icons in the Search Bar, which is now
enabled by default. The old plugins Navigator and Code2HTML are now
longer included. The old-fashioned toolbar, with its old Navigator
icons, is now disabled by default.

* Update GUI look-and-feel to current FlatLaf 3.6, with native library
support on all Isabelle platforms (now including arm64-linux).

* Additional look-and-feels "FlatLaf macOS Light" and "FlatLaf macOS
Dark" imitate original macOS more closely. This is the default for the
bundled application on macOS.

* Automatic GUI scaling on Linux, based on global GDK_SCALE for Java.
This is only an approximation: an integer factor that applies uniformly
to all displays. In contrast, Windows and macOS work with accurate GUI
scaling for each individual display, based on operating system settings
and FlatLaf defaults.

* GUI rendering of the gutter is now more accurate, using scaled icons